@startuml
title PsychPlatform - Sprint 4 Class Diagram

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam roundcorner 8
skinparam packageStyle rectangle
skinparam ArrowColor #4A5568
skinparam ClassBorderColor #1F2937
skinparam ClassBackgroundColor #FFFFFF
skinparam ClassHeaderBackgroundColor #E8EEF7

top to bottom direction

hide methods
hide stereotypes

class Patient {
  + id: string
}

class Psychologist {
  + id: string
}

class Booking {
  + id: string
}

class Session {
  + id: string
  + patientId: string
  + psychologistId: string
  + bookingId: string
  + status: string
  + startedAt: Date
  + endedAt: Date
  + createdAt: Date
  + updatedAt: Date
}

class SessionAccessCode {
  + id: string
  + sessionId: string
  + codeHash: string
  + expiresAt: Date
  + usedAt: Date
  + createdAt: Date
}

class Message {
  + id: string
  + sessionId: string
  + senderId: string
  + type: string
  + content: string
  + createdAt: Date
  + readAt: Date
}

class VoiceMessage {
  + id: string
  + messageId: string
  + filePath: string
  + mimeType: string
  + duration: int
  + size: int
  + createdAt: Date
}

class ChatbotMessage {
  + id: string
  + patientId: string
  + sessionId: string
  + role: string
  + content: string
  + language: string
  + createdAt: Date
}

class ClinicalSummary {
  + id: string
  + patientId: string
  + sessionId: string
  + dominantEmotion: string
  + urgencyScore: int
  + sentimentTrend: string
  + keyThemes: string
  + followUpQuestions: string
  + rawSummary: string
  + model: string
  + createdAt: Date
}

class EmotionalIndicator {
  + id: string
  + summaryId: string
  + emotion: string
  + score: int
  + source: string
  + createdAt: Date
}

class ReportArtifact {
  + id: string
  + sessionId: string
  + generatedBy: string
  + pdfPath: string
  + fileHash: string
  + createdAt: Date
}

Patient "1" <-- "0..*" Session : patient
Psychologist "1" <-- "0..*" Session : psychologist
Booking "1" <-- "0..1" Session : booking

Session "1" *-- "0..1" SessionAccessCode : access code
Session "1" *-- "0..*" Message : messages
Message "1" *-- "0..1" VoiceMessage : voice payload
Session "1" *-- "0..*" ChatbotMessage : chatbot history
Session "1" *-- "0..1" ClinicalSummary : clinical summary
ClinicalSummary "1" *-- "0..*" EmotionalIndicator : emotional indicators
Session "1" *-- "1..*" ReportArtifact : reports

Patient "0..1" <-- "0..*" ReportArtifact : generated by
Psychologist "0..1" <-- "0..*" ReportArtifact : generated by

note right of ReportArtifact
generatedBy may reference either
the Patient or the Psychologist
who terminated the session.
end note

@enduml
